<resources>
    <string name="app_name">WorkTimeSchedule</string>

    <string name="registerEmployee">Register Employee</string>
    <string name="addWorkCard">Add WorkCard</string>
    <string name="addWorkTask">Add WorkTask</string>
    <string name="references">References</string>

    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="jobTitle">Job Title:</string>
    <string name="addEmployee">Add Employee</string>

    <string name="name">Name:</string>
    <string name="description">Description:</string>
    <string name="hours">Hours:</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="leader">Leader</string>
    <string name="addTask">Add Task</string>

    <string name="startTime">Start Time</string>
    <string name="endTime">End Time</string>
    <string name="task">Task</string>
    <string name="taskDescription">Description</string>

    <string name="referenceByTask">Reference By Task</string>
    <string name="referenceByEmployee">Reference By Employee</string>

</resources>
