<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/name"
                android:textSize="20sp"
                android:id="@+id/nameTextView"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/nameTextView"
                android:background="@drawable/edit_text_background"
                android:inputType="text"
                android:id="@+id/name_Edit_Text"
                android:labelFor="@+id/name_Edit_Text"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/description"
                android:textSize="20sp"
                android:id="@+id/desriptionTextView"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/desriptionTextView"
                android:background="@drawable/edit_text_background"
                android:inputType="text"
                android:id="@+id/description_Edit_Text"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/hours"
                android:textSize="20sp"
                android:id="@+id/hoursTextView"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/hoursTextView"
                android:background="@drawable/edit_text_background"
                android:inputType="number"
                android:digits="0123456789"
                android:id="@+id/hours_Edit_Text"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/startDate"
                    android:textSize="20sp"
                    android:id="@+id/startTime"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/startTime"
                    android:gravity="center"
                    android:background="@drawable/edit_text_background"
                    android:id="@+id/start_Date_Text_View"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/endDate"
                    android:textSize="20sp"
                    android:id="@+id/endTime"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/endTime"
                    android:gravity="center"
                    android:background="@drawable/edit_text_background"
                    android:id="@+id/end_Date_Text_View"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/leader"
                    android:textSize="20sp"
                    android:id="@+id/leader"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/leader"
                    android:gravity="center"
                    android:background="@drawable/edit_text_background"
                    android:id="@+id/leader_Text_View"/>

            </RelativeLayout>

        </LinearLayout>

        <Button
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:background="@mipmap/button"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:text="@string/addTask"
            android:id="@+id/add_Task_Button"/>

    </LinearLayout>

</RelativeLayout>